добавлен AuthViewController и экран авторизации

--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="D2r-Nl-4c2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3BQ-58-PvJ">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -94,7 +94,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="10" y="-35"/>
+            <point key="canvasLocation" x="936.64122137404581" y="-35.211267605633807"/>
         </scene>
         <!--Single Image View Controller-->
         <scene sceneID="i9H-yO-ZJ2">
@@ -169,7 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sWU-1u-cED" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="888" y="-35"/>
+            <point key="canvasLocation" x="1814.5038167938931" y="-35.211267605633807"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="Kjw-gx-S77">
@@ -185,7 +185,62 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="txQ-m5-7Z2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="10" y="682"/>
+            <point key="canvasLocation" x="936.64122137404581" y="681.69014084507046"/>
+        </scene>
+        <!--Auth View Controller-->
+        <scene sceneID="T3D-11-JPF">
+            <objects>
+                <viewController id="iEX-CS-gEk" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="N9n-BN-m67">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="IyR-NA-Q7a">
+                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="tkm-fQ-cwd"/>
+                                    <constraint firstAttribute="width" constant="60" id="zB0-Zn-BjG"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A28-jW-0bo">
+                                <rect key="frame" x="16" y="680" width="361" height="48"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="8Ij-d6-lVr"/>
+                                </constraints>
+                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Войти">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </backgroundConfiguration>
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
+                                </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2Au-IP-4aK"/>
+                        <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="IyR-NA-Q7a" firstAttribute="centerY" secondItem="N9n-BN-m67" secondAttribute="centerY" id="26w-Dc-5Ih"/>
+                            <constraint firstItem="2Au-IP-4aK" firstAttribute="trailing" secondItem="A28-jW-0bo" secondAttribute="trailing" constant="16" id="GH0-S7-Uby"/>
+                            <constraint firstItem="IyR-NA-Q7a" firstAttribute="centerX" secondItem="N9n-BN-m67" secondAttribute="centerX" id="Po3-94-gP0"/>
+                            <constraint firstItem="A28-jW-0bo" firstAttribute="centerX" secondItem="N9n-BN-m67" secondAttribute="centerX" id="XjD-zZ-2t5"/>
+                            <constraint firstItem="2Au-IP-4aK" firstAttribute="bottom" secondItem="A28-jW-0bo" secondAttribute="bottom" constant="90" id="ZAc-PR-vhu"/>
+                            <constraint firstItem="A28-jW-0bo" firstAttribute="leading" secondItem="2Au-IP-4aK" secondAttribute="leading" constant="16" id="tzh-5b-Ufd"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="jW9-Zu-0fB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vhx-Yt-rzF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="937" y="-944"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="6iN-Vk-tOd">
@@ -208,11 +263,30 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tcZ-AV-m3t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1106" y="358"/>
+            <point key="canvasLocation" x="-179.38931297709922" y="357.74647887323948"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XFi-MS-jr2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3BQ-58-PvJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TNH-qz-nd2">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iEX-CS-gEk" kind="relationship" relationship="rootViewController" id="SIb-ki-dhe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2ix-cZ-jvH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-179" y="-944"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
+        <image name="auth_screen_logo" width="60" height="60"/>
         <image name="backward_icon" width="24" height="24"/>
         <image name="like_active" width="44" height="44"/>
         <image name="share_icon" width="51" height="50"/>
