--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -297,19 +297,27 @@
                                     <action selector="didTapBackButton:" destination="UaL-Mc-dYK" eventType="touchUpInside" id="7Ea-hk-0dr"/>
                                 </connections>
                             </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="c7e-er-P51">
+                                <rect key="frame" x="0.0" y="45" width="393" height="4"/>
+                                <color key="progressTintColor" red="0.0" green="0.0" blue="0.0" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                            </progressView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Lk2-D5-I5F"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Lk2-D5-I5F" firstAttribute="trailing" secondItem="ZZh-NX-kew" secondAttribute="trailing" id="1Rj-vm-6DY"/>
+                            <constraint firstItem="c7e-er-P51" firstAttribute="leading" secondItem="wOD-pZ-8et" secondAttribute="leading" id="Bk7-gh-PPc"/>
                             <constraint firstItem="ZZh-NX-kew" firstAttribute="leading" secondItem="Lk2-D5-I5F" secondAttribute="leading" id="CYw-RJ-Y6p"/>
-                            <constraint firstItem="ZZh-NX-kew" firstAttribute="top" secondItem="Lk2-D5-I5F" secondAttribute="top" id="PGc-GE-exC"/>
+                            <constraint firstItem="ZZh-NX-kew" firstAttribute="top" secondItem="wOD-pZ-8et" secondAttribute="top" id="PGc-GE-exC"/>
+                            <constraint firstAttribute="trailing" secondItem="c7e-er-P51" secondAttribute="trailing" id="S7Z-Yz-Vh4"/>
                             <constraint firstItem="64f-PH-8F4" firstAttribute="leading" secondItem="Lk2-D5-I5F" secondAttribute="leading" constant="8" id="W5T-NY-Vi4"/>
                             <constraint firstItem="64f-PH-8F4" firstAttribute="top" secondItem="Lk2-D5-I5F" secondAttribute="top" constant="11" id="iHb-sv-yrb"/>
-                            <constraint firstItem="Lk2-D5-I5F" firstAttribute="bottom" secondItem="ZZh-NX-kew" secondAttribute="bottom" id="yYn-bx-pKq"/>
+                            <constraint firstItem="c7e-er-P51" firstAttribute="top" secondItem="64f-PH-8F4" secondAttribute="bottom" constant="10" id="uRv-FO-w2g"/>
+                            <constraint firstAttribute="bottom" secondItem="ZZh-NX-kew" secondAttribute="bottom" id="yYn-bx-pKq"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="progressView" destination="c7e-er-P51" id="g3q-75-cNh"/>
                         <outlet property="webView" destination="ZZh-NX-kew" id="tlC-7E-7Q7"/>
                     </connections>
                 </viewController>
